--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv-expand": "^5.1.0",
     "express": "^4.19.2",
     "express-enforces-ssl": "^1.1.0",
+    "express-session": "^1.18.0",
     "final-form": "4.20.7",
     "final-form-arrays": "3.0.2",
     "full-icu": "^1.4.0",
